--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -142,8 +142,8 @@
   <!-- Google Analytics -->
   {% include google_analytics.html %}
 
-  <!-- do not remove -->
-  <span id="62cd7b7da1aff3196fdc26b60e396df9"></span>
+  <!-- do not remove
+  <span id="62cd7b7da1aff3196fdc26b60e396df9"></span> -->
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
